fix alignment

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   margin: 0;
-  font-size: 3em; /* inherits from header-content and scales */
+  font-size: 300%; /* inherits from header-content and scales */
   text-align: center;
 }
 
